--- a/app/sass/sliders/sliders.scss
+++ b/app/sass/sliders/sliders.scss
@@ -25,6 +25,9 @@
 		position: relative;
 	}
 	.slider {
+		&>button {
+			display: none !important;
+		}
 		&__arrows {
 			
 			position: absolute;
