--- a/app/sass/content/advantages-list.scss
+++ b/app/sass/content/advantages-list.scss
@@ -22,7 +22,11 @@
 		margin: 50px 0;
 		z-index: 800;
 		transition: opacity .4s ease-out;
+		@media (min-width: $mob-xs) {
+			display: none;
+		};
 		@media (min-width: $desk-w) {
+			display: block;
 			opacity: 0;
 		};
 		img {
@@ -33,7 +37,7 @@
 			position: absolute;
 			top: 50%;
 			left: 50%;
-			transform: translate(-50%, -50%) scale(0);
+			transform: translate(-50%, -50%) scale(1);
 			width: 100%;
 			height: 100%;
 			z-index: 400;
@@ -44,14 +48,17 @@
 		};
 		&.show {
 			opacity: 1;
-			svg {
-				&.yellow-ellipse-1 {
-					animation: scale 1s linear forwards 2.5s, rotate-back 20s linear infinite 3.5s;
+			@media (min-width: $desk-w) {
+				svg {
+					transform: translate(-50%, -50%) scale(0);
+					&.yellow-ellipse-1 {
+						animation: scale 3s ease forwards, rotate-back 30s linear infinite 3s;
+					}
+					&.yellow-ellipse-2 {
+						animation: scale 3s ease forwards, rotate 36s linear infinite 3s;
+					}
 				}
-				&.yellow-ellipse-2 {
-					animation: scale 1s linear forwards 3.5s, rotate 26s linear infinite 3.5s;
-				}
-			}
+			};
 		}
 	}
 }
@@ -79,6 +86,10 @@
 	li {
 		position: relative;
 		transition: opacity .3s, transform 1.2s, top 1.2s, bottom 1.2s, left 1.2s, right 1.2s ease-out;
+		will-change: transform top bottom left right;
+		width: 100%;
+		max-width: 230px;
+		margin: 0 auto;
 		&:before {
 			position: absolute;
 			top: 50%;
@@ -93,6 +104,7 @@
 			width: 300px;
 			min-height: 200px;
 			opacity: 0;
+			max-width: 100%;
 			&:nth-child(1) {
 				top: 50%;
 				left: 50%;
@@ -116,6 +128,11 @@
 				left: 50%;
 				transform: translate(-50%, 50%);
 				transition-delay: 1.2s;
+				width: 355px;
+				.advantage-item__img {
+					right: 50%;
+					transform: translateX(50%);
+				}
 			}
 			&:nth-child(5) {
 				top: 50%;
