--- a/app/templates/includes/components/main-banner.twig
+++ b/app/templates/includes/components/main-banner.twig
@@ -2,23 +2,8 @@
 		<div class="uk-container uk-container--large">
 
 			<div class="main-banner__img" style="background-image:url(img/media/main-banner-1-1440x730.png)" uk-scrollspy="cls:border-anim">
-<!-- <svg>
-	<defs>
-		<clipPath id="cut-center">
-			<ellipse fill="red" rx="800px" ry="200px" cx="690" cy="-100" />
-		</clipPath>
-	</defs>
-	<rect
-		width="100%"
-		height="100px"
-		clip-path="url(#cut-center)"
-		fill="blue"
-		></rect>
-	<rect
-		width="100%"
-		height="100px"
-		fill="red"
-		></rect>
+<!-- 				<svg class="img-mask">
+  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#mask3"></use>
 </svg> -->
 			</div>
 
