--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -13,6 +13,7 @@
 @import "content/advantages-h-list";
 @import "content/typebox-section";
 @import "content/eggs-section";
+@import "content/total-section";
 @import "content/content";
 @import "footer/footer";
 
