--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -14,6 +14,7 @@
 @import "content/typebox-section";
 @import "content/eggs-section";
 @import "content/total-section";
+@import "content/about-egg";
 @import "content/content";
 @import "footer/footer";
 
