--- a/app/sass/content/advantages-h-list.scss
+++ b/app/sass/content/advantages-h-list.scss
@@ -94,6 +94,32 @@
 			}
 		}
 	}
+	&--three-items {
+		max-width: 1080px;
+		margin: 0 auto;
+		.item {
+			&:nth-child(1) {
+				.item__img {
+					&:after {
+						width: 200px;
+						right: -160%;
+						max-width: 193px;
+						background: url('../img/icon-svg/long-line-1.svg') 0 center no-repeat;
+					}
+				}
+			}
+			&:nth-child(2) {
+				.item__img {
+					&:after {
+						right: -160%;
+						width: 200px;
+						max-width: 179px;
+						background: url('../img/icon-svg/long-line-2.svg') 0 center no-repeat;
+					}
+				}
+			}
+		}
+	}
 }
 
 /*______ End Advantages-h-list ______*/
