--- a/app/templates/company.twig
+++ b/app/templates/company.twig
@@ -164,5 +164,119 @@
 		</div>
 	</section>
 
+	<section class="typebox-section wave-bg" uk-scrollspy="cls: wave-anim">
+		<div class="uk-container">
+			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Потребитель нам важнее всего</h2>
+
+			<ul class="typebox-list mask" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
+
+				<li class="item">
+					<div class="item__img">
+						<div class="bg-img">
+							<svg width="100%" height="100%" class="typebox-bg-img">
+							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+							</svg>
+						</div>
+						<div class="content-img">
+							<img data-src="img/media/box-type-12.png" alt="" uk-img>
+						</div>
+					</div>
+					<div class="item__text">
+						<div class="title-h3">Каждой аудитории свой продукт</div>
+						<div class="item__subtitle">Оригинальные запатентованные торговые марки в разных ценовых категориях</div>
+					</div>
+				</li>
+
+				<li class="item">
+					<div class="item__img">
+						<div class="bg-img">
+							<svg width="100%" height="100%" class="typebox-bg-img">
+							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-2"></use>
+							</svg>
+						</div>
+						<div class="content-img">
+							<img data-src="img/media/box-type-13.png" alt="" uk-img>
+						</div>
+					</div>
+					<div class="item__text">
+						<div class="title-h3">Легко найти в магазине</div>
+						<div class="item__subtitle">Продукция упакована в красочные короба-шоубоксы, которые удобно размещаются непосредственно на яичной полке магазина без дополнительного ручного труда.</div>
+					</div>
+				</li>
+
+				<li class="item">
+					<div class="item__img">
+						<div class="bg-img">
+							<svg width="100%" height="100%" class="typebox-bg-img">
+							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-3"></use>
+							</svg>
+						</div>
+						<div class="content-img">
+							<img data-src="img/media/box-type-14.png" alt="" uk-img>
+						</div>
+					</div>
+					<div class="item__text">
+						<div class="title-h3">Регулярные скидки и акции</div>
+						<div class="item__subtitle">Маркетинговая поддержка собственных брендов, направленная на покупателей.</div>
+					</div>
+				</li>
+
+			</ul>
+
+		</div>
+	</section>
+
+	<section class="offer-section">
+		<div class="uk-container">
+			<h2 class="title-h2 uk-text-center">Открыты новым идеям</h2>
+			<div class="offer-section__inner uk-text-center">
+				<img data-src="img/media/chicken.png" alt="" uk-img>
+				<a href="" class="btn btn--small btn--yellow"><span>Предложить идею</span></a>
+			</div>
+		</div>
+	</section>
+
+	<section class="slider-section wave-bg" uk-scrollspy="cls: wave-anim">
+		<div class="uk-container uk-container--small">
+			<h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Самое ценное для нас – люди, которые работают для Вас</h2>
+			<!-- begin composition-slider -->
+			<div class="custom-slider">
+				<div class="uk-container">
+					<div class="slider">
+						<div class="slide">
+							<img src="img/media/sliders/slider-company-1.png" alt="">
+						</div>
+						<div class="slide">
+							<img src="img/media/sliders/composition-slide.svg" alt="Состав яйца">
+						</div>
+					</div>
+					<div class="slider__arrows">
+						<div class="slide-prev">
+							<svg width="154px" height="29px" class="slider-arrow">
+							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#big-arrow-left"></use>
+							</svg>
+						</div>
+						<div class="slide-next">
+							<svg width="154px" height="29px" class="slider-arrow">
+							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#big-arrow-right"></use>
+							</svg>
+						</div>
+					</div>
+				</div>
+			</div><!-- end composition-slider -->
+		</div>
+	</section>
+
+	<!-- begin news-section -->
+	<section class="news-section wave-bg" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
+		<div class="uk-container">
+			<h2 class="title-h2 uk-text-center">Новости компании «Лето-Групп»</h2>
+			<ul class="news-list">
+				<li class="item"></li>
+			</ul>
+		</div>
+	</section><!-- end news-section -->
+
+
 {% endblock %}
 
