--- a/app/templates/includes/components/slider-section.twig
+++ b/app/templates/includes/components/slider-section.twig
@@ -1,5 +1,5 @@
 
-<section class="composition-section wave-bg" uk-scrollspy="cls: wave-anim">
+<section class="slider-section wave-bg" uk-scrollspy="cls: wave-anim">
 	<div class="uk-container uk-container--small">
 		<h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Какие элементы содержит яйцо?</h2>
 		{% include './composition-slider.twig' %}
