--- a/app/templates/company.twig
+++ b/app/templates/company.twig
@@ -272,7 +272,12 @@
 		<div class="uk-container">
 			<h2 class="title-h2 uk-text-center">Новости компании «Лето-Групп»</h2>
 			<ul class="news-list">
-				<li class="item"></li>
+				<li class="item">
+					<article>
+						<figure></figure>
+						<h3 class="title-h3"></h3>
+					</article>
+				</li>
 			</ul>
 		</div>
 	</section><!-- end news-section -->
