--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -15,6 +15,7 @@
 @import "content/eggs-section";
 @import "content/total-section";
 @import "content/offet-section";
+@import "content/news-section";
 @import "content/about-egg";
 @import "content/content";
 @import "footer/footer";
