--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -17,6 +17,7 @@
 @import "content/offet-section";
 @import "content/news-section";
 @import "content/about-egg";
+@import "content/tabs";
 @import "content/content";
 @import "footer/footer";
 
