--- a/app/css/style.css
+++ b/app/css/style.css
@@ -2626,6 +2626,117 @@ svg {
 
 /*______ End About egg ______*/
 
+/*______ Tabs ______*/
+
+.products-section {
+  margin: 120px 0;
+}
+
+.tab-sw {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.tab-sw li {
+  margin: 0 10px;
+  display: block;
+}
+
+.tab-sw li a {
+  position: relative;
+  padding: 0 3.25em;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  height: 60px;
+  border-radius: 72px;
+  background-color: transparent;
+  text-transform: uppercase;
+  border: 2px solid #9bc045;
+  color: #5b6356;
+  letter-spacing: .8px;
+  font-weight: bold;
+  -webkit-transition: background-color .3s, color .3s ease;
+  -o-transition: background-color .3s, color .3s ease;
+  -moz-transition: background-color .3s, color .3s ease;
+  transition: background-color .3s, color .3s ease;
+}
+
+.tab-sw li a:after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -9px;
+  width: 15px;
+  height: 7.5px;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  background: url("../img/icon-svg/triangle-down.svg") center 0 no-repeat;
+  opacity: 0;
+  -webkit-transition: opacity .3s ease;
+  -o-transition: opacity .3s ease;
+  -moz-transition: opacity .3s ease;
+  transition: opacity .3s ease;
+}
+
+.tab-sw li.uk-active a {
+  color: #ffffff;
+  background-color: #9bc045;
+}
+
+.tab-sw li.uk-active a:after {
+  opacity: 1;
+}
+
+.products-section__inner {
+  position: relative;
+}
+
+.products-section__inner .ellipse-abs-1,
+.products-section__inner .ellipse-abs-2 {
+  position: absolute;
+  top: 25px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  z-index: 10;
+}
+
+.custom-tabs {
+  position: relative;
+  z-index: 20;
+  min-height: 800px;
+}
+
+/*______ End Tabs ______*/
+
 /*______ MAIN CONTENT ______*/
 
 /*______ END MAIN CONTENT ______*/
@@ -3012,6 +3123,101 @@ svg {
   margin-top: 50px;
 }
 
+/*______ Tab slider ______*/
+
+.tab-slider {
+  margin: 0 auto;
+  padding-top: 50px;
+  max-width: 920px;
+}
+
+.tab-slider .brands-grid .row {
+  margin-bottom: 30px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.tab-slider .brands-grid .row img {
+  margin: 0 10px 20px;
+  max-height: 100px;
+}
+
+.tab-slider .brands-grid .row:nth-child(1) img {
+  max-width: 200px;
+}
+
+.tab-slider .brands-grid .row:nth-child(2) img {
+  max-width: 180px;
+}
+
+.tab-slider .brands-grid .row:nth-child(3) img {
+  max-width: 150px;
+}
+
+.tab-slider .brands-grid .row:nth-child(4) img {
+  max-width: 120px;
+}
+
+.tab-slider .slick-dots {
+  bottom: -25px;
+}
+
+.tab-slider .slick-dots li {
+  margin: 0 15px;
+  width: auto;
+  height: auto;
+}
+
+.tab-slider .slick-dots li button {
+  padding: 0;
+  width: 10px;
+  height: 10px;
+  -webkit-transform: scale(0.5);
+  -moz-transform: scale(0.5);
+  -ms-transform: scale(0.5);
+  transform: scale(0.5);
+  border-radius: 50%;
+  background-color: #ECE6E1;
+  -webkit-transition: background-color .3s, -webkit-transform .3s, -webkit-box-shadow .2s ease-in;
+  transition: background-color .3s, -webkit-transform .3s, -webkit-box-shadow .2s ease-in;
+  -o-transition: transform .3s, background-color .3s, box-shadow .2s ease-in;
+  -moz-transition: transform .3s, background-color .3s, box-shadow .2s ease-in, -moz-transform .3s;
+  transition: transform .3s, background-color .3s, box-shadow .2s ease-in;
+  transition: transform .3s, background-color .3s, box-shadow .2s ease-in, -webkit-transform .3s, -moz-transform .3s, -webkit-box-shadow .2s ease-in;
+}
+
+.tab-slider .slick-dots li button:before {
+  display: none;
+}
+
+.tab-slider .slick-dots li.slick-active button {
+  background-color: #ffb422;
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+  -webkit-box-shadow: 0px 4px 4px rgba(255, 167, 34, 0.25);
+  box-shadow: 0px 4px 4px rgba(255, 167, 34, 0.25);
+}
+
+/*______ End Tab slider ______*/
+
 /*______ END SLIDERS ______*/
 
 /*______ MODALS ______*/
@@ -3152,6 +3358,10 @@ svg {
     max-width: 400px;
   }
 
+  .tab-sw li a {
+    font-size: 14px;
+  }
+
   .advantages-h-section {
     margin-bottom: 60px;
   }
@@ -3272,6 +3482,10 @@ svg {
   .green-number {
     font-size: 35px;
     line-height: 40px;
+  }
+
+  .tab-sw li a {
+    font-size: 16px;
   }
 
   .footer__column-wrapper {
@@ -3416,6 +3630,10 @@ svg {
   .brands-slider .slider .slick-dots {
     bottom: -50px;
   }
+
+  .tab-slider .slick-dots {
+    bottom: -50px;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -3481,22 +3699,10 @@ svg {
   }
 
   .advantages-section .center-box.show svg {
-    -webkit-transform: translate(-50%, -50%) scale(0);
-    -moz-transform: translate(-50%, -50%) scale(0);
-    -ms-transform: translate(-50%, -50%) scale(0);
-    transform: translate(-50%, -50%) scale(0);
-  }
-
-  .advantages-section .center-box.show svg.yellow-ellipse-1 {
-    -webkit-animation: scale 3s ease forwards, rotate-back 30s linear infinite 3s;
-    -moz-animation: scale 3s ease forwards, rotate-back 30s linear infinite 3s;
-    animation: scale 3s ease forwards, rotate-back 30s linear infinite 3s;
-  }
-
-  .advantages-section .center-box.show svg.yellow-ellipse-2 {
-    -webkit-animation: scale 3s ease forwards, rotate 36s linear infinite 3s;
-    -moz-animation: scale 3s ease forwards, rotate 36s linear infinite 3s;
-    animation: scale 3s ease forwards, rotate 36s linear infinite 3s;
+    -webkit-transform: translate(-50%, -50%) scale(1);
+    -moz-transform: translate(-50%, -50%) scale(1);
+    -ms-transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%) scale(1);
   }
 
   .advantages-list {
@@ -3730,6 +3936,12 @@ svg {
   .brands-slider .slider__arrows {
     display: block;
     max-width: 1140px;
+  }
+
+  .tab-slider .brands-grid .row {
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
   }
 }
 
