--- a/app/sass/content/advantages-list.scss
+++ b/app/sass/content/advantages-list.scss
@@ -50,12 +50,12 @@
 			opacity: 1;
 			@media (min-width: $desk-w) {
 				svg {
-					transform: translate(-50%, -50%) scale(0);
+					transform: translate(-50%, -50%) scale(1);
 					&.yellow-ellipse-1 {
-						animation: scale 3s ease forwards, rotate-back 30s linear infinite 3s;
+						//animation: scale 3s ease forwards, rotate-back 30s linear infinite 3s;
 					}
 					&.yellow-ellipse-2 {
-						animation: scale 3s ease forwards, rotate 36s linear infinite 3s;
+						//animation: scale 3s ease forwards, rotate 36s linear infinite 3s;
 					}
 				}
 			};
