--- a/app/sass/sliders/sliders.scss
+++ b/app/sass/sliders/sliders.scss
@@ -255,4 +255,81 @@
 	}
 }
 
+
+/*______ Tab slider ______*/
+
+.tab-slider {
+	margin: 0 auto;
+	padding-top: 50px;
+	max-width: 920px;
+	.brands-grid {
+		.row {
+			margin-bottom: 30px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-wrap: wrap;
+			@media (min-width: $desk-w) {
+				flex-wrap: nowrap;
+			};
+			img {
+				margin: 0 10px 20px;
+				max-height: 100px;
+			}
+			&:nth-child(1) {
+				img {
+					max-width: 200px;
+				}
+			}
+			&:nth-child(2) {
+				img {
+					max-width: 180px;
+				}
+			}
+			&:nth-child(3) {
+				img {
+					max-width: 150px;
+				}
+			}
+			&:nth-child(4) {
+				img {
+					max-width: 120px;
+				}
+			}
+		}
+	}
+	.slick-dots {
+		bottom: -25px;
+		@media (min-width: $tablet-w) {
+			bottom: -50px;
+		};
+		li {
+			margin: 0 15px;
+			width: auto;
+			height: auto;
+			button {
+				padding: 0;
+				width: 10px;
+				height: 10px;
+				transform: scale(.5);
+				border-radius: 50%;
+				background-color: $bgColorUI;
+				transition: transform .3s, background-color .3s, box-shadow .2s ease-in;
+				&:before {
+					display: none;
+				}
+			}
+			&.slick-active {
+				button {
+					background-color: $yellow;
+					transform: scale(1);
+					box-shadow: 0px 4px 4px rgba(255, 167, 34, 0.25);
+				}
+			}
+		}
+	}
+}
+
+/*______ End Tab slider ______*/
+
 /*______ END SLIDERS ______*/
