--- a/app/css/style.css
+++ b/app/css/style.css
@@ -390,6 +390,148 @@ p {
   bottom: 50%;
 }
 
+.steps-list {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  margin: 200px 0 30px;
+  counter-reset: item;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -moz-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  background: url("../img/icon-svg/step-line.svg") center 0 no-repeat;
+}
+
+.steps-list li {
+  position: relative;
+  width: 30%;
+}
+
+.steps-list li:before {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  counter-increment: item;
+  content: "0" counter(item);
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  z-index: 500;
+  color: #549537;
+}
+
+.steps-list li:nth-child(1) {
+  -webkit-transform: translateX(40px);
+  -moz-transform: translateX(40px);
+  -ms-transform: translateX(40px);
+  transform: translateX(40px);
+}
+
+.steps-list li:nth-child(1) .round-item__img img {
+  top: -30px;
+}
+
+.steps-list li:nth-child(2) {
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.steps-list li:nth-child(2) .round-item__img img {
+  top: 30px;
+}
+
+.steps-list li:nth-child(3) .round-item__img img {
+  top: 60px;
+  left: 75%;
+}
+
+.steps-list li:nth-child(4) {
+  -webkit-transform: translateY(40px);
+  -moz-transform: translateY(40px);
+  -ms-transform: translateY(40px);
+  transform: translateY(40px);
+}
+
+.steps-list li:nth-child(4) .round-item__img img {
+  top: -30px;
+}
+
+.steps-list li:nth-child(5) {
+  -webkit-transform: translateX(-40%) translateY(25%);
+  -moz-transform: translateX(-40%) translateY(25%);
+  -ms-transform: translateX(-40%) translateY(25%);
+  transform: translateX(-40%) translateY(25%);
+}
+
+.steps-list li:nth-child(5) .round-item__img img {
+  top: 50px;
+}
+
+.round-item {
+  position: relative;
+  padding-top: 160px;
+  max-width: 400px;
+}
+
+.round-item__img {
+  position: absolute;
+  top: 0;
+  left: 25px;
+  width: 230px;
+  height: 230px;
+  z-index: 24;
+}
+
+.round-item__img img {
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  z-index: 15;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+.round-item__text {
+  position: relative;
+  z-index: 25;
+}
+
+.round-item svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 14;
+  color: #faf4ef;
+}
+
+.round-item .btn {
+  margin-top: 20px;
+  padding: 0 35px;
+  height: 60px;
+  max-width: 255px;
+}
+
 /*______ END COMPONENTS ______*/
 
 /*______ ANIMATION ______*/
@@ -3703,6 +3845,18 @@ svg {
     -moz-transform: translate(-50%, -50%) scale(1);
     -ms-transform: translate(-50%, -50%) scale(1);
     transform: translate(-50%, -50%) scale(1);
+  }
+
+  .advantages-section .center-box.show svg.yellow-ellipse-1 {
+    -webkit-animation: scale 3s ease forwards, rotate-back 30s linear infinite 3s;
+    -moz-animation: scale 3s ease forwards, rotate-back 30s linear infinite 3s;
+    animation: scale 3s ease forwards, rotate-back 30s linear infinite 3s;
+  }
+
+  .advantages-section .center-box.show svg.yellow-ellipse-2 {
+    -webkit-animation: scale 3s ease forwards, rotate 36s linear infinite 3s;
+    -moz-animation: scale 3s ease forwards, rotate 36s linear infinite 3s;
+    animation: scale 3s ease forwards, rotate 36s linear infinite 3s;
   }
 
   .advantages-list {
