--- a/app/sass/global/components.scss
+++ b/app/sass/global/components.scss
@@ -203,6 +203,112 @@
 	}
 }
 
+.steps-list {
+	position: relative;
+	@include list-reset;
+	margin: 200px 0 30px;
+	counter-reset: item;
+	display: flex;
+	align-items: flex-start;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	background: url('../img/icon-svg/step-line.svg') center 0 no-repeat;
+	li {
+		position: relative;
+		width: 30%;
+		&:before {
+			position: absolute;
+			top: 50%;
+			left: 0;
+			counter-increment: item;	
+			content: "0"counter(item);
+			transform: translateY(-50%);
+			z-index: 500;
+			color: $green;
+		}
+		&:nth-child(1) {
+			transform: translateX(40px);
+			.round-item__img {
+				img {
+					top: -30px;
+				}
+			}
+		}
+		&:nth-child(2) {
+			transform: translateY(-50%);
+			.round-item__img {
+				img {
+					top: 30px;
+				}
+			}
+		}
+		&:nth-child(3) {
+			.round-item__img {
+				img {
+					top: 60px;
+					left: 75%;
+				}
+			}
+		}
+		&:nth-child(4) {
+			transform: translateY(40px);
+			.round-item__img {
+				img {
+					top: -30px;
+				}
+			}
+		}
+		&:nth-child(5) {
+			transform: translateX(-40%) translateY(25%);
+			.round-item__img {
+				img {
+					top: 50px;
+				}
+			}
+		}
+	}
+}
+
+.round-item {
+	position: relative;
+	padding-top: 160px;
+	max-width: 400px;
+	&__img {
+		position: absolute;
+		top: 0;
+		left: 25px;
+		width: 230px;
+		height: 230px;
+		z-index: 24;
+		img {
+			position: absolute;
+			top: 20px;
+			left: 50%;
+			z-index: 15;
+			transform: translateX(-50%);
+		}
+	}
+	&__text {
+		position: relative;
+		z-index: 25;
+	}
+	svg {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 14;
+		color: #faf4ef;
+	}
+	.btn {
+		margin-top: 20px;
+		padding: 0 35px;
+		height: 60px;
+		max-width: 255px;
+	}
+}
+
 /*______ END COMPONENTS ______*/
 
 
